Fix horizontal scroll safari

--- a/themes/mainroad/static/css/style.css
+++ b/themes/mainroad/static/css/style.css
@@ -391,6 +391,7 @@ pre code {
 	white-space: -o-pre;
 	white-space: -moz-pre;
 	white-space: -webkit-pre;
+	overflow-wrap: normal;
 }
 
 kbd {
